<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yizhou Zhao, CMPUT 301, University of Alberta. All rights reserved.
  ~ You may use, distribute, or modify this code under terms and conditirions of the Code of Student Beaviour at University of Alberta.
  ~ You may find a copy of the license in this project. Otherwise, please contact yizhou4@ualberta.ca.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yizhou.counter.CounterDisplay"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/show_current_value"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/grid_current_value"
        android:text=""
        android:gravity="center"
        android:inputType="number"
        android:textSize="100sp"
        android:background="@android:color/transparent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/show_current_value"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/show_comment"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="12sp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:hint="@string/hint_comment"
        android:text=""
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/show_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/button_reset"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/ic_reset"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_delete"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        android:layout_marginBottom="32dp" />

    <ImageButton
        android:id="@+id/button_increase"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_increase"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        android:layout_marginBottom="140dp" />

    <ImageButton
        android:id="@+id/button_decrease"
        android:layout_width="100dp"
        android:scaleType="fitXY"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_degrease"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_value"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_current_value" />

    <EditText
        android:id="@+id/show_initial_value"
        android:textSize="14sp"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:ems="10"
        android:background="@android:color/transparent"
        android:inputType="number"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/show_current_value"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
